2006-10-26  Jeremy Cribb <jcribb@email.unc.edu>
	* header.m: freshened the output strings so that it makes more sense.
	* pretty_plot.m: increased the font sizes for the text areas of figures.
	
2006-08-07  Kalpit Desai <kvdesai@email.unc.edu>
	* drawlines.m: Now sets the lengths of the lines to whichever is larger, auto axis range and given axis range. This enables to zooming in and out without affecting the lines.	
	
2005-08-07  Jeremy Cribb <jcribb@email.unc.edu>
	* bin2d.m:  now handles edge condition correctly.  (finally found the source of the strange off-by-1 error.

2005-07-31  Jeremy Cribb <jcribb@email.unc.edu>
* bin2d.m:  added handling for 'divide by zero' cases.

2005-07-20  Jeremy Cribb <jcribb@email.unc.edu>
	* bin2d.m:  added.  works like griddata for arranging 2D data into a matrix, but instead of just averaging the values in a selected bin, it reports the standard error as well.  Also, interpolation between values is not done. (Use interp2 for this).

2006-05-18  Kalpit Desai <kvdesai@email.unc.edu>
	* parse_csv_int.m: Fixed a bug where multidigit numbers in the string weren't recognized correctly.

2006-05-17  Kalpit Desai <kvdesai@email.unc.edu>
	* parse_csv_int.m: Now also supports colon (:) operator to make a linearly spaced array.

2006-05-17  Kalpit Desai <kvdesai@email.unc.edu>
	* parse_csv_int.m: Corrected documentation.

2006-05-17  Kalpit Desai <kvdesai@email.unc.edu>
	* parse_csv_int.m: Added. A utility that reliably parses a string containing comma (or whitespace) separated integers. 

2005-12-23  Kalpit Desai <kvdesai@email.unc.edu>
	* drawlines.m: Better documentation
	
2005-09-06  Kalpit Desai <kvdesai@email.unc.edu>
	* drawlines.m: There must be an accidental commit of this file which had one line deleted. Fixed it.

2005-08-31  Kalpit Desai <kvdesai@email.unc.edu>
	* drawlines.m: Added ability to tag the lines so that they can be identified later.

2005-08-14  Kalpit Desai <kvdesai@email.unc.edu>